Task#7/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-helloworld-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-helloworld
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: springboot-helloworld
        version: "v2"
    spec:
      containers:
        - name: springboot-helloworld
          image: 'ngtrainings/springboot-helloworld-master:v2'
          ports:
            - containerPort: 8080
