Task#7/blue-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-helloworld-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-helloworld
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: springboot-helloworld
        version: "v1"
    spec:
      containers:
        - name: springboot-helloworld
          image: 'ngtrainings/springboot-helloworld-master:v1'
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-helloworld-svc
  labels:
    name: springboot-helloworld
    version: "v1"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-helloworld
    version: "v1"
  type: NodePort
