Task#7/deployment-v5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-helloworld-v5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-helloworld-v5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: springboot-helloworld
        version: "v5"
    spec:
      containers:
        - name: springboot-helloworld
          image: 'ngtrainings/springboot-helloworld-master:v5'
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-helloworld-v5
  labels:
    name: springboot-helloworld
    version: "v5"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-helloworld
    version: "v5"
  type: NodePort
