Task#7/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-helloworld
  labels:
    name: springboot-helloworld
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-helloworld
  type: NodePort
