Task#7/switch-blue-to-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-helloworld-svc
  labels:
    name: springboot-helloworld
    version: "v2"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-helloworld
    version: "v2"
  type: NodePort
