Task#7/update_service-v5.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-helloworld-v5
  labels:
    name: springboot-helloworld
    version: "v5"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-helloworld
    version: "v5"
