Task#7/ingress-default.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sb-ingress
spec:
  backend:
    serviceName: springboot-helloworld-v6
    servicePort: 8080
