Task#7/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sb-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /home
        backend:
          serviceName: springboot-helloworld-v5
          servicePort: 8080
      - path: /ingress
        backend:
          serviceName: springboot-helloworld-v6
          servicePort: 8080
